--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - 9091:9091
     environment:
       TZ: Asia/Shanghai
+  order-management-mysql:
+    image: mysql:5.6
+    command: --character-set-server=utf8 --collation-server=utf8_general_ci --lower_case_table_names=1 --default-time-zone=+08:00
+    restart: always
+    environment:
+        - MYSQL_ROOT_PASSWORD=gzl123
+        - MYSQL_DATABASE=order_management
+        - TZ=Asia/Shanghai
+    ports:
+        - 3307:3306
