--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,6 @@ plugins {
     id 'pmd'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
@@ -27,6 +25,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly "org.flywaydb:flyway-core"
     implementation "com.alibaba:fastjson:1.2.75"
+    testImplementation "com.h2database:h2:1.4.197"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
