--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,17 @@ version: '3.1'
 services:
   order-management:
     build:
-      context: ./
+      context: .
       dockerfile: Dockerfile
     container_name: order-management
+    restart: always
     ports:
-      - 9091:8080
+      - '9091:8080'
     environment:
       TZ: Asia/Shanghai
     depends_on:
+      - order-management-mysql
+    links:
       - order-management-mysql
 
   order-management-mysql:
@@ -24,4 +27,4 @@ services:
       - MYSQL_DATABASE=order_management
       - TZ=Asia/Shanghai
     ports:
-      - 3307:3306
+      - '3306:3306'
