--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/order_management?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/order_management?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: gzl123
     driver-class-name: com.mysql.cj.jdbc.Driver
   flyway:
     enabled: true
-    locations: classpath:db/migration/main
+    locations: classpath:db/migration
     encoding: UTF-8
     schemas: order_management
     validate-on-migrate: true
