--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,14 @@ on:
     branches: [ master ]
 
 jobs:
+  checkout:
+  
+    runs-on: ubuntu-latest
+    
+    steps: 
+    - uses: actions/checkout@v2
+    - name: Checkout code with pmd
+      run: ./gradlew check
   build:
 
     runs-on: ubuntu-latest
