--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,20 +14,15 @@ on:
     branches: [ master ]
 
 jobs:
-  checkout:
-  
-    runs-on: ubuntu-latest
-    
-    steps: 
-    - uses: actions/checkout@v2
-    - name: Checkout code with pmd
-      run: ./gradlew check
-  build:
+
+  order-management:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+    - name: Check code with pmd
+      run: ./gradlew check
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -37,5 +32,8 @@ jobs:
       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
       with:
         arguments: build
+    - name: Run test
+      run: ./gradlew test
     - name: BuildDockerImage
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+   
